--- a/FinApp/templates/cadastro.html
+++ b/FinApp/templates/cadastro.html
@@ -66,7 +66,7 @@
           <label for="empresa">Nome da Empresa</label>
           <input type="text" id="empresa" name="empresa" placeholder="Digite o nome da empresa" required>
 
-          <label for="cnpj">CPF ou CNPJ</label>
+          <label for="cnpj">CNPJ</label>
           <input type="text" id="cnpj" name="cnpj" placeholder="Digite o CNPJ" required>
 
           <label for="ramo">Ramo da Empresa</label>
